:bug: Fix: Update Spacing

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -109,6 +109,7 @@
     svg {
         width: px-to-rem(120);
         height: px-to-rem(120);
+        margin-bottom: px-to-rem(16);
         fill: #FFFFFF;
         position: relative;
         z-index: 3;
